syntax = "proto3";

package primitive;
import "nanopb.proto";

message Primitive {
    oneof value
    {
        int32 int_val = 1;
        int64 long_val = 2;
        float float_val = 3;
        double double_val = 4;
        bool bool_val = 5;
        string string_val = 6 [ (nanopb).max_size = 4096 ];
    }
}
